.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: progapws-service
spec:
  selector:
    app: progapws-pod
  type: ClusterIP
  ports:
    - name: http
      port: 80 #porta interna
      targetPort: http #porta a aplicação
