.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: progapws-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/server-alias: progapws.policiacivil.go.gov.br
spec:
  tls:
    - hosts:
        - progapws-homo.policiacivil.go.gov.br
        - progapws.policiacivil.go.gov.br
      secretName: certificado-pc
  rules:
    - host: progapws-homo.policiacivil.go.gov.br
      http:
        paths:
          - backend:
              service:
                name: progapws-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
